--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
+include googlesearch/browser_agents.txt
 
 recursive-include tests *
 recursive-exclude * __pycache__
